[package]
name = "rusty-prism"
version = "0.1.0"
authors = ["Frank Murphy <fmurphy@arbor.net>"]

[dependencies.rustc-serialize]
git = "https://github.com/rust-lang/rustc-serialize.git"

[dependencies.libc]
git = "https://github.com/rust-lang/libc.git"

[dependencies.bounded-spsc-queue]
git = "https://github.com/AnIrishDuck/bounded-spsc-queue.git"
